--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0"
+    "gh-pages": "^4.0.0",
+    "prettier": "2.8.1"
   },
   "homepage": "http://mrlokimonster.github.io/library.ui"
 }
